# rustphish

./: Cargo.toml  README.md  README_EN.md  build_config.toml  client_config.toml  server_config.toml  template.html
appendix/: Cargo.toml  Makefile.toml  build.rs  config.rs  resource.rc
appendix/src/: helper.rs  instance.rs  k32.rs  main.rs
appendix/src/common/: crtapi.rs  ldrapi.rs  mod.rs  utils.rs
appendix/src/common/structs/: mod.rs  noheap.rs  unsafety.rs
appendix/src/debug/: k32.rs  mod.rs
appendix/src/native/: allocator.rs  antisand.rs  gate.rs  memory.rs  mod.rs  ntapi.rs  ntdef.rs  ntpsapi.rs
appendix/src/winapi/: allocator.rs  antisand.rs  info.rs  mod.rs  winsock.rs
client/: Cargo.toml  Makefile.toml
client/src/: config.rs  db.rs  generator.rs  main.rs  qr.rs  smtp.rs
client/src/malware/: mod.rs  patch_tool.rs
frontend/: index.html  success.html
macro_encrypt/: Cargo.toml  build.rs  config.rs
macro_encrypt/src/: lib.rs
script/: action_rebuild.sh  build_lnk.ps1
server/: Cargo.toml  Makefile.toml  build.rs  config.rs
server/src/: main.rs
server/src/db/: mod.rs
shared/: Cargo.toml
shared/src/: structs.rs  utils.rs
