[package]
name = "client"
version = "0.1.0"
edition = "2024"

# 基础依赖，这些依赖在任何情况下都需要
[dependencies]
serde = { version = "1.0", features = ["derive"] }
colored = "3.0"
clap = "4.5.26"
shared = { path = "../shared" }
# zip = { version = "2.2.3", features = ["aes-crypto"] }

# 数据库功能所需依赖
sled = { version = "0.34.7", optional = true }
bincode = { version = "1.3", optional = true }
zerocopy = { version = "0.6.0", optional = true }
rand = { version = "0.8", optional = true }

# 邮件功能所需依赖
lettre = { version = "0.11", optional = true , features = ["builder", "rustls-tls"]}
toml = { version = "0.8", optional = true }
rpassword = { version = "7.3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
mime = { version = "0.3", optional = true }
mime_guess = { version = "2.0.5", optional = true }
percent-encoding = { version = "2.3.1", optional = true}

# 二维码功能所需依赖
qrcode = { version = "0.14.1", optional = true}
image = { version = "0.25.6", optional = true}
base64 = { version = "0.22.1", optional = true}

# 附件钓鱼功能所需依赖
object = { version = "0.36.7", features = ["read", "std"], optional = true }

# 开发环境依赖
[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["full", "test-util"] }
criterion = "0.5"

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# 功能特性定义
[features]
db = ["dep:sled", "dep:bincode", "dep:zerocopy", "dep:rand", "dep:toml"] # 启用数据库功能。包括读取服务端数据库、导入客户端数据库等。
mail = ["db", "dep:lettre", "dep:toml", "dep:rpassword", "dep:tokio", "dep:mime_guess", "dep:mime", "dep:percent-encoding"] # 启用发送邮件功能
appendix = ["dep:object"] # 启用附件钓鱼功能
qrcode = ["dep:qrcode", "dep:image", "dep:base64"] # 启用二维码生成功能

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
